atulizado o banco de dados

--- a/mb/appgulaonline/src/app/folder/folder.page.html
+++ b/mb/appgulaonline/src/app/folder/folder.page.html
@@ -13,9 +13,16 @@
       <ion-title size="large">{{ folder }}</ion-title>
     </ion-toolbar>
   </ion-header>
-
+  <ion-item>
+    <div class="core">
+      <p>Seja bem vindo ao GulaOnline!</p>
+    </div>
+  </ion-item>
+  <!--h2{
+  color: var(--ion-color-primary);
+}
   <div id="container">
     <strong class="capitalize">{{ folder }}</strong>
     <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  </div>-->
 </ion-content>
