--- a/mb/appgulaonline/src/app/app.component.scss
+++ b/mb/appgulaonline/src/app/app.component.scss
@@ -22,9 +22,9 @@ ion-menu.md ion-note {
   padding-left: 10px;
 }
 
-ion-menu.md ion-list#inbox-list {
-  border-bottom: 1px solid var(--ion-color-step-150, #d7d8da);
-}
+//ion-menu.md ion-list#inbox-list {
+  //border-bottom: 1px solid var(--ion-color-step-150, #d7d8da);
+//}
 
 ion-menu.md ion-list#inbox-list ion-list-header {
   font-size: 22px;
@@ -90,7 +90,7 @@ ion-menu.ios ion-item.selected ion-icon {
 
 ion-menu.ios ion-item ion-icon {
   font-size: 24px;
-  color: #73849a;
+  color: #9a8973;
 }
 
 ion-menu.ios ion-list#labels-list ion-list-header {
