tbalimentos não edita img

--- a/back end/gulaonline/view/tbalimentos/alimentos.html
+++ b/back end/gulaonline/view/tbalimentos/alimentos.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="gulaonline.css" />
+  <link rel="stylesheet" type="text/css" href="alimentos.css" />
   <title>Gula Online</title>
 </head>
 
@@ -42,7 +42,8 @@
       </tfoot>
     </table>
   </div>
-  <script src="gulaonline.js"></script>
+  <!--<p class="msg" id="mensagem">Mensagens do Sistema</p>-->
+  <script src="alimentos.js"></script>
 </body>
 
 </html>
