--- a/mb/appgulaonline/src/app/paginas/home/home.page.html
+++ b/mb/appgulaonline/src/app/paginas/home/home.page.html
@@ -7,9 +7,9 @@
 
 <ion-content>
   <ion-list>
-    <!-- <ion-item class="bak" ion-item *ngFor="let em of emm">
-    <h1>Nome Empresa: </h1>
+    <ion-item class="bak" ion-item *ngFor="let em of emm">
+      <h1>Nome Empresa: </h1>
       <p class="cor">{{em.linksite}}</p>
-    </ion-item>-->
+    </ion-item>
   </ion-list>
 </ion-content>
