--- a/front/view/comum/tbalimentos_comum/alimentos_comum.css
+++ b/front/view/comum/tbalimentos_comum/alimentos_comum.css
@@ -37,7 +37,7 @@ button {
     font-size: 1em;
     border-radius: 8px;
     color: white;
-    background: blue; 
+    background: #3b429cad; 
     text-shadow: rgb(0, 0, 0) 2px 1px 2px;
     padding: 2px 13px;
 }
