--- a/front/view/outros/tbstatus/status.css
+++ b/front/view/outros/tbstatus/status.css
@@ -11,11 +11,12 @@ div {
     font-size: 1.2em;
 }
 .table1 {
-    width: 343px;
+    width: 340px;
     font-size: 1em;
     border-radius: 4px;
     margin: 25px 0 0 100px;
     border: 1px solid;
+    margin-right: 100px;
 }
 th { 
     font-size: 1em;
@@ -57,7 +58,7 @@ td input[type="button"] {
     border: 1px solid rgb(0, 0, 0);
     border-radius: 4px;
     color: rgb(255, 255, 255);
-    background: #88d67fa6; 
+    background: #3b429cad; 
     text-shadow: rgb(0, 0, 0) 2px 1px 2px;
 }
 ::placeholder{
@@ -68,7 +69,7 @@ button {
     font-size: 1em;
     border-radius: 8px;
     color: white;
-    background: #88d67fa6; 
+    background: #ffffff; 
     text-shadow: rgb(0, 0, 0) 2px 1px 2px;
     padding: 4px 23px;
 }
