--- a/front/view/robesio/todos_empre/empreendedores.css
+++ b/front/view/robesio/todos_empre/empreendedores.css
@@ -1,6 +1,7 @@
 @import "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css";
 div {
     text-align: center;
+    align-items: center;
 }
 .msg {
     border: 1px solid;
@@ -11,7 +12,7 @@ div {
     font-size: 1.2em;
 }
 .table1 {
-    width: 1350px;
+    width: 1290px;
     font-size: 1em;
     border-radius: 4px;
     margin: 0 0 0 0;
@@ -68,7 +69,7 @@ td input[type="button"] {
     border: 1px solid rgb(0, 0, 0);
     border-radius: 4px;
     color: rgb(255, 255, 255);
-    background: #88d67fa6; 
+    background: #3b429cad; 
     text-shadow: rgb(0, 0, 0) 2px 1px 2px;
 }
 ::placeholder{
@@ -79,7 +80,7 @@ button {
     font-size: 1em;
     border-radius: 8px;
     color: white;
-    background: #88d67fa6; 
+    background: #3b429cad; 
     text-shadow: rgb(0, 0, 0) 2px 1px 2px;
     padding: 4px 23px;
 }
