--- a/front/view/adm/alimentos_adm/alimentos_adm.css
+++ b/front/view/adm/alimentos_adm/alimentos_adm.css
@@ -22,6 +22,9 @@ th {
     border: 1px solid;
     border-radius: 4px;
 }
+.tamanho {
+    width: 100px;
+}
 td { 
     font-size: 1em;
     padding: 7px;
