--- a/front/view/adm/pedido/pedido.css
+++ b/front/view/adm/pedido/pedido.css
@@ -16,7 +16,7 @@ div {
     font-size: 1em;
     border-radius: 4px;
     margin: 15px 0 0 10px;
-    border: 1px solid;
+    /*border: 1px solid;*/
 }
 th { 
     font-size: 1em;
