--- a/front/view/comum/tbalimentos_comum/alimentos_comum.css
+++ b/front/view/comum/tbalimentos_comum/alimentos_comum.css
@@ -15,7 +15,7 @@ div {
     font-size: 1em;
     border-radius: 4px;
     margin: 25px 0 0 100px;
-    border: 1px solid;
+    /*border: 1px solid;*/
     text-align: center;
 }
 th { 
