--- a/front/view/home_adm.html
+++ b/front/view/home_adm.html
@@ -13,91 +13,8 @@
     <link rel="stylesheet" href="../styles/background.css">
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/root.css">
-    <link rel="stylesheet" href="/styles/dosis.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" type="text/css" href="./adm/pedido/pedido.css" />
-
-    <style>
-        .iconimgs {
-            margin: 50px;
-            display: grid;
-            grid-template-columns: auto auto auto;
-        }
-
-        .iconimg {
-            margin: 20px;
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-
-            border: dashed 2px #000;
-            cursor: pointer;
-        }
-
-        .iconimg:hover {
-            border-style: solid;
-        }
-
-        .iconimg img {
-            width: 250px;
-            height: 200px;
-            border: solid 2px #000000;
-        }
-
-        .iconimg p {
-            margin-top: 20px;
-            text-transform: uppercase;
-        }
-
-        .contact img {
-            width: 60px;
-        }
-
-        .carousel-item {
-            width: 72vw;
-            height: 40vh;
-        }
-
-        .carousel-item img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        @media (max-width: 950px) {
-            .iconimgs {
-                margin: 20px;
-            }
-
-            .iconimg {
-                margin: 10px;
-                padding: 10px;
-            }
-
-            .iconimg img {
-                width: 150px;
-                height: 120px;
-                ;
-                border: solid 2px #000000;
-            }
-
-            .iconimg p {
-                margin-top: 20px;
-            }
-        }
-
-        .icon-contact {
-            background-color: white;
-            border-radius: 50%;
-            border: solid 2px white;
-            margin: 5px;
-        }
-
-        .login_input_sweet input {
-            margin: 10px;
-        }
-    </style>
 </head>
 
 <body onload="carregaPedidos()">
@@ -119,7 +36,7 @@
             <table>
                 <thead>
                     <tr>
-                        <th colspan="11"> Pedidos </th>
+                        <th colspan="12"> Pedidos </th>
                     </tr>
                     <tr>
                         <th>Id_ca</th>
@@ -132,6 +49,7 @@
                         <th>Bairro</th>
                         <th>Ano/Mês/Hora</th>
                         <th>IdStatus</th>
+                        <th>QtdCli</th>
                         <th>Ações</th>
                     </tr>
                 </thead>
