--- a/front/view/outros/login/login.html
+++ b/front/view/outros/login/login.html
@@ -13,77 +13,9 @@
     <link rel="stylesheet" href="../../../styles/background.css">
     <link rel="stylesheet" href="../../../styles/root.css">
     <link rel="stylesheet" href="../../../styles/header.css">
+    <link rel="stylesheet" href="../../../styles/style.css">
     <link rel="stylesheet" href="./login.css">
 
-    <style>
-        .iconimgs {
-            margin: 50px;
-            display: grid;
-            grid-template-columns: auto auto auto;
-        }
-
-        .iconimg {
-            margin: 20px;
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-
-            border: dashed 2px #000;
-            cursor: pointer;
-        }
-
-        .iconimg:hover {
-            border-style: solid;
-        }
-
-        .iconimg img {
-            width: 250px;
-            height: 200px;
-            border: solid 2px #000000;
-        }
-
-        .iconimg p {
-            margin-top: 20px;
-            text-transform: uppercase;
-        }
-
-        .contact img {
-            width: 60px;
-        }
-
-
-
-        @media (max-width: 950px) {
-            .iconimgs {
-                margin: 20px;
-            }
-
-            .iconimg {
-                margin: 10px;
-                padding: 10px;
-            }
-
-            .iconimg img {
-                width: 150px;
-                height: 120px;
-                ;
-                border: solid 2px #000000;
-            }
-
-            .iconimg p {
-                margin-top: 20px;
-            }
-        }
-
-        .icon-contact {
-            background-color: white;
-            border-radius: 50%;
-            border: solid 2px white;
-            margin: 5px;
-        }
-    </style>
 </head>
 
 <body>
