--- a/front/Front-End/styles/background.css
+++ b/front/Front-End/styles/background.css
@@ -151,23 +151,23 @@ a{
 }
 
 .container .back1 {
-    background-color: #ff9aa2;
+    background-color: #ffffff;
 }
 
 .container .back2 {
-    background-color: #ffdac1;
+    background-color: #ffffff;
 }
 
 .container .back3 {
-    background-color: #e2f0cb;
+    background-color: #ffffff;
 }
 
 .container .back4 {
-    background-color: #b5ead7;
+    background-color: #ffffff;
 }
 
 .container .back5 {
-    background-color: #c7ceea;
+    background-color: #ffffff;
 }
 
 .benditoP {
